--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 15vmin;
   pointer-events: none;
 }
 
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #ffffff;
 }
 
 .App-link {
@@ -31,8 +31,29 @@
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
+ 
+
   }
   to {
     transform: rotate(360deg);
   }
+
 }
+
+
+.Contacto {
+  color: #000000;
+  width: auto;
+  height: 50px;
+  background: cyan;
+  transition-property: color, transform;
+  transition: background-color 2s;
+  
+}
+
+.Contacto:hover {
+  background-color: #36685b;
+  color: #ffffff;
+  transform: scale(1.1);
+}
+
