--- a/src/App.css
+++ b/src/App.css
@@ -39,13 +39,33 @@
   }
 
 }
-
+form {
+  background-color: #15172b;
+  border-radius: 20px;
+  box-sizing: border-box;
+  height: auto;
+  padding: 20px;
+  width: auto;
+}
+input {
+  background-color: #303245;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  font-size: 18px;
+  height: 100%;
+  outline: 0;
+  padding: 4px 20px 0;
+  width: auto;
+}
 
 .Contacto {
-  color: #000000;
+  color: #ffffff;
   width: auto;
-  height: 50px;
-  background: cyan;
+  height: auto;
+  padding: 0.3cm;
+  background-color: #15172b;
   transition-property: color, transform;
   transition: background-color 2s;
   
